--- a/package.json
+++ b/package.json
@@ -7,20 +7,32 @@
     "@types/react": "^17.0.24",
     "@types/react-dom": "^17.0.9",
     "@types/three": "^0.132.0",
+    "css-select": "^4.3.0",
+    "minimist": "^1.2.6",
+    "node-forge": "^1.3.1",
+    "nth-check": "^2.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "svgo": "^2.8.0",
     "three": "^0.132.2",
     "web-vitals": "^1.1.2"
+  },
+  "overrides": {
+    "svgo": "^2.8.0"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "@types/jest": "^27.4.1",
-    "react-scripts": "^5.0.0",
     "jest": "^27.5.1",
+    "react-scripts": "^5.0.0",
     "ts-jest": "^27.1.3",
     "typescript": "^4.5.5"
+  },
+  "engines": {
+    "node": "16.14.2",
+    "npm": "8.5.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -56,6 +68,10 @@
       ".(ts|tsx)": "ts-jest"
     },
     "testRegex": "(/__tests__/.*|\\.(test|spec))\\.(ts|tsx|js)$",
-    "moduleFileExtensions": ["ts", "tsx", "js"]
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js"
+    ]
   }
 }
