--- a/package.json
+++ b/package.json
@@ -1,14 +1,20 @@
 {
   "name": "typescript-lic",
-  "version": "0.1.0",
+  "version": "0.1.3",
   "private": true,
   "dependencies": {
     "@types/node": "^12.20.26",
     "@types/react": "^17.0.24",
     "@types/react-dom": "^17.0.9",
     "@types/three": "^0.132.0",
+    "css": "^3.0.0",
+    "css-select": "^4.3.0",
+    "minimist": "^1.2.6",
+    "node-forge": "^1.3.1",
+    "nth-check": "^2.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "svgo": "^2.8.0",
     "three": "^0.132.2",
     "web-vitals": "^1.1.2"
   },
@@ -17,16 +23,32 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "@types/jest": "^27.4.1",
-    "react-scripts": "^5.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.19.0",
+    "@typescript-eslint/parser": "^5.19.0",
+    "ansi-regex": "^6.0.1",
+    "eslint": "^8.13.0",
+    "eslint-plugin-react": "^7.29.4",
+    "eslint-plugin-unused-imports": "^2.0.0",
     "jest": "^27.5.1",
+    "node": "16.14.2",
+    "npm": "^8.5.0",
+    "react-scripts": "^5.0.0",
     "ts-jest": "^27.1.3",
     "typescript": "^4.5.5"
+  },
+  "overrides": {
+    "svgo": "^2.8.0"
+  },
+  "engines": {
+    "node": "16.14.2",
+    "npm": "8.5.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "jest --maxWorkers=1",
-    "eject": "react-scripts eject"
+    "eslint": "eslint . --ext .ts --ext .tsx --ext .js",
+    "eslint-fix": "eslint . --ext .ts --ext .tsx --ext .js --fix"
   },
   "eslintConfig": {
     "extends": [
@@ -56,6 +78,10 @@
       ".(ts|tsx)": "ts-jest"
     },
     "testRegex": "(/__tests__/.*|\\.(test|spec))\\.(ts|tsx|js)$",
-    "moduleFileExtensions": ["ts", "tsx", "js"]
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js"
+    ]
   }
 }
